--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "axios": "^0.18.0",
     "bcrypt": "^1.0.3",
     "bulma": "^0.6.2",
+    "filestack-react": "^1.3.9",
     "json-web-token": "^2.1.3",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.12",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-filestack": "^0.9.7",
     "react-router-dom": "^4.2.2"
   }
 }
