--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^16.3.1",
     "react-filestack": "^0.9.7",
     "react-router-dom": "^4.2.2",
-    "react-sidebar": "^2.3.2"
+    "react-sidebar": "^2.3.2",
+    "scroll-to": "component/scroll-to"
   }
 }
