--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "json-web-token": "^2.1.3",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.12",
+    "mongoose-unique-validator": "^2.0.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-filestack": "^0.9.7",
